{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 13,
  "lineage": "e0a664b2-7eb7-7e4b-f7d5-b38fd0f43af4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "amazon-linux",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e12ffc2dd465f6e4",
            "arn": "arn:aws:ec2:ap-south-1:037931886320:instance/i-0e314151bde20136b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e314151bde20136b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-033a81e7e25780dbe"
              }
            ],
            "primary_network_interface_id": "eni-033a81e7e25780dbe",
            "private_dns": "ip-10-0-0-231.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.231",
            "public_ip": "65.0.72.157",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d88382b23f5a4c17",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d748e2e6ca463bf0",
            "tags": {
              "Name": "my_project-instance-amazon-linux"
            },
            "tags_all": {
              "Name": "my_project-instance-amazon-linux"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090a7aaacfd6ddaba"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "i-0e314151bde20136b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "ubuntu",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:037931886320:instance/i-095e95d6f34667b9d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095e95d6f34667b9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d95405c97515440f"
              }
            ],
            "primary_network_interface_id": "eni-0d95405c97515440f",
            "private_dns": "ip-10-0-1-87.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.87",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-043c0c3c8a89c31fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a54622ce3d87cfd",
            "tags": {
              "Name": "my_project-instance-ubuntu"
            },
            "tags_all": {
              "Name": "my_project-instance-ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090a7aaacfd6ddaba"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "i-095e95d6f34667b9d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:internet-gateway/igw-0afe461c5b83ebcfd",
            "id": "igw-0afe461c5b83ebcfd",
            "owner_id": "037931886320",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-igw"
            },
            "tags_all": {
              "Name": "my_project-igw"
            },
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:route-table/rtb-0fc3e70fcdcaa901e",
            "id": "rtb-0fc3e70fcdcaa901e",
            "owner_id": "037931886320",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "my_project-private-rt"
            },
            "tags_all": {
              "Name": "my_project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "rtb-0fc3e70fcdcaa901e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:route-table/rtb-0e249facab100e78b",
            "id": "rtb-0e249facab100e78b",
            "owner_id": "037931886320",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afe461c5b83ebcfd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_project-public-rt"
            },
            "tags_all": {
              "Name": "my_project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "rtb-0e249facab100e78b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085cbf5b2a05f5fe",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e249facab100e78b",
            "subnet_id": "subnet-0d748e2e6ca463bf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_subnet.main",
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04934cd12b1acba72",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fc3e70fcdcaa901e",
            "subnet_id": "subnet-03a54622ce3d87cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_subnet.main",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:subnet/subnet-0d748e2e6ca463bf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d748e2e6ca463bf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037931886320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-subnet-0"
            },
            "tags_all": {
              "Name": "my_project-subnet-0"
            },
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "subnet-0d748e2e6ca463bf0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:subnet/subnet-03a54622ce3d87cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a54622ce3d87cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037931886320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-subnet-1"
            },
            "tags_all": {
              "Name": "my_project-subnet-1"
            },
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "subnet-03a54622ce3d87cfd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:subnet/subnet-02029d7de785afb2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02029d7de785afb2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037931886320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-subnet-2"
            },
            "tags_all": {
              "Name": "my_project-subnet-2"
            },
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "subnet-02029d7de785afb2c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:subnet/subnet-07e5155da8f1ce583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e5155da8f1ce583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037931886320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-subnet-3"
            },
            "tags_all": {
              "Name": "my_project-subnet-3"
            },
            "vpc_id": "vpc-088ba6a9d4a339539"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "subnet-07e5155da8f1ce583",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037931886320:vpc/vpc-088ba6a9d4a339539",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0386c87a60090cab3",
            "default_route_table_id": "rtb-0dfe507521b251837",
            "default_security_group_id": "sg-090a7aaacfd6ddaba",
            "dhcp_options_id": "dopt-04a4bf2286e713708",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088ba6a9d4a339539",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfe507521b251837",
            "owner_id": "037931886320",
            "region": "ap-south-1",
            "tags": {
              "Name": "my_project-vpc"
            },
            "tags_all": {
              "Name": "my_project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "037931886320",
            "id": "vpc-088ba6a9d4a339539",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}